[ backend ]: ## Adding new user_name attribute to return AuthToken.
